[package]
name = "hyper-tide"
version = "0.1.0"
authors = ["d_ttang <d_ttang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
futures = "0.3.16"
hyper = { version = "0.14.11", features = ["http1", "http2", "server", "runtime", "stream"] }
route-recognizer = "0.3.0"
tokio = { version = "1.10.0", features = ["full"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.7", features = ["full"] }
url = "2.2.2"
